apps/coflow/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: &namespace coflow
  labels:
    kubernetes.io/metadata.name: *namespace
